--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/me.jpg
+    - assets/images/flutter.png
+    - assets/images/dart.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
